fix: resolve payment UI and integration issues
- Stop API spam when payment is canceled
- Update UI for failed transactions
- Fix CORS 403 Preflight in Gateway
- Fix Cookie config for localhost